--- a/src/fxml/instantiator.fxml
+++ b/src/fxml/instantiator.fxml
@@ -27,9 +27,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.8836662749706228" maxHeight="3200.0" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="853.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.instantiation.InstantiatorController">
+<SplitPane dividerPositions="0.7908847184986595" maxHeight="3200.0" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="748.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.instantiation.InstantiatorController">
    <items>
-      <VBox prefHeight="773.0" prefWidth="1198.0">
+      <VBox prefHeight="631.0" prefWidth="1198.0">
         <children>
             <MenuBar>
               <menus>
@@ -50,7 +50,7 @@
                 </Menu>
               </menus>
             </MenuBar>
-          <SplitPane dividerPositions="0.23411371237458195" focusTraversable="true" prefHeight="603.0" prefWidth="1198.0" VBox.vgrow="ALWAYS">
+          <SplitPane dividerPositions="0.23411371237458195" focusTraversable="true" prefHeight="616.0" prefWidth="1198.0" VBox.vgrow="ALWAYS">
             <items>
               <AnchorPane minWidth="230.0" prefHeight="532.0" prefWidth="383.0" SplitPane.resizableWithParent="false">
                 <children>
@@ -137,9 +137,9 @@
                         </VBox>
                 </children>
               </AnchorPane>
-            <AnchorPane id="Content" prefHeight="505.0" prefWidth="911.0">
+            <AnchorPane id="Content" prefHeight="647.0" prefWidth="913.0">
                      <children>
-                        <VBox layoutX="10.0" layoutY="14.0" prefHeight="704.0" prefWidth="858.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                        <VBox layoutX="10.0" layoutY="14.0" prefHeight="543.0" prefWidth="893.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                            <children>
                               <HBox prefHeight="29.0" prefWidth="874.0">
                                  <children>
@@ -248,7 +248,7 @@
                                           <Label prefHeight="17.0" prefWidth="424.0" text="State-number =[action name]=&gt; State-number =[action name]=&gt; ..." textFill="#8a8686" />
                                        </children>
                                     </HBox>
-                                    <StackPane alignment="BOTTOM_CENTER" prefHeight="324.0" prefWidth="874.0">
+                                    <StackPane alignment="BOTTOM_CENTER" prefHeight="242.0" prefWidth="893.0">
                                        <children>
                                           <ListView fx:id="listViewTraces" prefHeight="330.0" prefWidth="907.0" />
                                           <Label fx:id="lblListViewTracesEmpty" alignment="CENTER" prefHeight="395.0" prefWidth="858.0" text="List Empty " textFill="#a19494">
@@ -258,9 +258,10 @@
                                           </Label>
                                        </children>
                                     </StackPane>
-                                    <HBox alignment="CENTER_RIGHT">
+                                    <HBox alignment="CENTER_RIGHT" spacing="2.0">
                                        <children>
                                           <Label fx:id="lblSave" prefHeight="23.0" prefWidth="83.0" />
+                                          <Button fx:id="btnTraceAnalyser" mnemonicParsing="false" onAction="#openInTraceAnalyser" text="Trace Analyser" />
                                           <Button fx:id="btnSaveGeneratedTraces" disable="true" mnemonicParsing="false" onAction="#saveGeneratedTraces" prefHeight="25.0" prefWidth="56.0" text="save" />
                                        </children>
                                     </HBox>
