--- a/src/fxml/task_cell.fxml
+++ b/src/fxml/task_cell.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="rootPane" prefWidth="852.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="rootPane" prefHeight="49.0" prefWidth="852.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox fx:id="hboxTrace" alignment="CENTER_LEFT" prefHeight="60.0">
          <children>
-            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="83.0">
+            <HBox alignment="CENTER" prefHeight="49.0" prefWidth="82.0">
                <children>
-                  <Label fx:id="lblTraceID" alignment="CENTER" minWidth="67.0" prefHeight="23.0" prefWidth="67.0">
+                  <Label fx:id="lblTraceID" alignment="CENTER" minWidth="38.0" prefHeight="23.0" prefWidth="100.0">
                      <padding>
                         <Insets left="2.0" />
                      </padding>
@@ -23,7 +23,7 @@
                         <Font size="13.0" />
                      </font>
                   </Label>
-                  <MenuButton fx:id="menuButtonOptions" alignment="TOP_LEFT" mnemonicParsing="false" visible="false">
+                  <MenuButton fx:id="menuButtonOptions" alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="25.0" prefWidth="69.0" visible="false">
                     <items>
                       <MenuItem mnemonicParsing="false" text="Action 1" />
                       <MenuItem mnemonicParsing="false" text="Action 2" />
@@ -34,7 +34,7 @@
                   <Insets right="2.0" />
                </HBox.margin>
             </HBox>
-            <ScrollPane fx:id="scrollPaneTrace" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.55" prefHeight="58.0" prefWidth="849.0" vbarPolicy="NEVER">
+            <ScrollPane fx:id="scrollPaneTrace" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.55" prefHeight="49.0" prefWidth="779.0" vbarPolicy="NEVER">
                <content>
                   <HBox fx:id="hbox" alignment="CENTER_LEFT">
                      <padding>
